fixed the alignment when editing tags

--- a/style/index.scss
+++ b/style/index.scss
@@ -128,3 +128,8 @@ html {
 .tag.is-delete {
   cursor: pointer;
 }
+
+.tags .tags {
+  margin-bottom: 0;
+  margin-right: 0.5rem;
+}
